--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
 html, body, div#root {
   height: 100%;
 }
+
+.secondary-text {
+  color: #abbcd5;
+}
+
+.mb-2 {
+  margin-bottom: 1.25em;
+}
+
+.cloth-display {
+  border-bottom: 1px solid #e5e5ea;
+}
