--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,15 @@ html, body, div#root {
 .cloth-side-active p small {
   color: white;
 }
+
+.color-display-active {
+  background-color: #0984e3 !important;
+}
+
+.color-display-active p {
+  color: white !important;
+}
+
+.text-center {
+  text-align: center;
+}
