+working order dashboard +working order routes (to order detail) some ui and ux fix and improvements

--- a/src/App.css
+++ b/src/App.css
@@ -33,3 +33,9 @@ html, body, div#root {
 .text-center {
   text-align: center;
 }
+
+.clickable-panel {
+  cursor: pointer;
+  transition: .25s ease-in-out;
+  user-select: none;
+}
