--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,14 @@ html, body, div#root {
   margin-bottom: 1.25em;
 }
 
+.mt-1 {
+  margin-top: 0.5em;
+}
+
+.mb-1 {
+  margin-bottom: 0.5em;
+}
+
 .cloth-display {
   width: 100%;
   height: auto;
